Fix visual bugs on mobile - modal, nav, contact section

--- a/app/styles/_global.scss
+++ b/app/styles/_global.scss
@@ -29,16 +29,3 @@ svg {
 .container .row img {
 	max-width: 100%;
 }
-
-.contact--link {
-	border: 1px solid #000000;
-	margin: 30px auto;
-	h3 {
-		margin-top: 30px;
-	}
-}
-
-.map {
-	width: 100%;
-	height: 300px;
-}
