--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -28,8 +28,8 @@
 
 .mobile-menu-link {
 	li {
-		font-size: 2.7rem;
-		padding-top: 1rem;
+		font-size: 2rem;
+		padding-top: 0.8rem;
 		line-height: 4rem;
 	}
 }
